[gd_scene load_steps=7 format=2]

[ext_resource path="res://Minigames/Coin Game/Scripts/MoveableObject.gd" type="Script" id=1]
[ext_resource path="res://Minigames/Coin Game/Materials/DustBunnt_Outside.png" type="Texture" id=2]
[ext_resource path="res://Minigames/Coin Game/Materials/DustBunny_center.png" type="Texture" id=3]
[ext_resource path="res://Minigames/Coin Game/Materials/DustBunnt_Full.png" type="Texture" id=4]
[ext_resource path="res://Minigames/Coin Game/Materials/DustBunny_Particles.png" type="Texture" id=5]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 500.0
flag_disable_z = true
spread = 170.28
gravity = Vector3( 0, 200, 0 )
initial_velocity = 504.0
initial_velocity_random = 0.18
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="DustBunny_Spawnable" type="Node2D"]
position = Vector2( 866.022, 401.546 )
script = ExtResource( 1 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
input_pickable = true
collision_layer = 512
collision_mask = 512
gravity_scale = 0.0
contact_monitor = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
position = Vector2( -3.5636, -10.6908 )
polygon = PoolVector2Array( -80, -60, 90, -60, 90, 90, -80, 90 )

[node name="FullImage" type="Sprite" parent="RigidBody2D"]
visible = false
position = Vector2( 0, 3.5636 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="Edges" type="Sprite" parent="RigidBody2D"]
position = Vector2( 0, 3.5636 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="DustParticles" type="Particles2D" parent="RigidBody2D"]
scale = Vector2( 0.05, 0.05 )
amount = 20
lifetime = 5.0
speed_scale = 2.21
explosiveness = 0.34
randomness = 0.29
process_material = SubResource( 1 )
texture = ExtResource( 5 )

[node name="Center" type="Sprite" parent="RigidBody2D"]
position = Vector2( 0, 3.5636 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="Center_FallingApart" type="Sprite" parent="RigidBody2D"]
position = Vector2( 0, 3.5636 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[connection signal="mouse_entered" from="RigidBody2D" to="." method="_on_RigidBody2D_mouse_entered"]
[connection signal="mouse_exited" from="RigidBody2D" to="." method="_on_RigidBody2D_mouse_exited"]
